syntax = "proto3";

package pb.user;

option go_package = "./user";

service UserService {
  rpc GetUsers(Empty) returns (Users) {}
  rpc GetUser(GetUserReq) returns (User) {}
}

message Empty {}

message GetUserReq {
  int64 id = 1;
}

message User {
  string last_name = 1;
  string first_name = 2;
  string email = 3;
}

message Users {
  repeated User users = 1;
}